Update tests wellbeing tracker